@@ -1,21 +1,10 @@
-//
-// Source code recreated from a .class file by IntelliJ IDEA
-// (powered by FernFlower decompiler)
-//
-
 package Tablero;
-
-//HEY HOLA CHULAS JIJIJIJIJI
-//TIENEN Q AGREGAR LOS MÓDULOS DE AUDIO AL PROYECTO UWU
-// Son estos :3
-//  --add-modules javafx.controls,javafx.fxml,javafx.media --add-exports javafx.base/com.sun.javafx=ALL-UNNAMED
 
 import Classes.Personaje;
 import DataBaseClasses.PartidaDB;
 import DataBaseClasses.PreguntasDB;
 import Menu.Menu;
 import Sockets.Cliente;
-
 import java.io.IOException;
 import java.net.URL;
 import java.time.LocalDate;
@@ -57,69 +46,81 @@ import javafx.scene.text.TextFlow;
 import javafx.stage.Stage;
 import javafx.util.Duration;
 import Menu.MenuController;
-
-
 import Sockets.Cliente.PersonajesListener;
 import Sockets.Cliente.MensajeListener;
 
+// Clase controlador de la pantalla del tablero (El juego como tal)
+
 public class TableroController extends MenuController implements Initializable, PersonajesListener, MensajeListener {
 
-    @FXML GridPane contentPane;
-    @FXML GridPane gridTable;
-    @FXML GridPane sideBarPane;
-    @FXML GridPane seleccionPersonaje;
-    @FXML GridPane gridPaneListaPer;
-    @FXML GridPane contenedorListaPreguntas;
-    @FXML GridPane gridPanePreguntas;
-    @FXML GridPane contenedorListaPer;
-    @FXML GridPane btnsContainer;
-    @FXML GridPane gridPaneRespuestas;
-    @FXML Pane shadowPanePreguntas;
-    @FXML Pane rootPane;
-    @FXML Pane shadowPanePersonajes;
+    // Paneles
+    @FXML private GridPane contentPane;
+    @FXML private GridPane gridTable;
+    @FXML private GridPane sideBarPane;
+    @FXML private GridPane seleccionPersonaje;
+    @FXML private GridPane gridPaneListaPer;
+    @FXML private GridPane contenedorListaPreguntas;
+    @FXML private GridPane gridPanePreguntas;
+    @FXML private GridPane contenedorListaPer;
+    @FXML private GridPane btnsContainer;
+    @FXML private GridPane gridPaneRespuestas;
+    @FXML private Pane shadowPanePreguntas;
+    @FXML private Pane rootPane;
+    @FXML private Pane shadowPanePersonajes;
 
-    @FXML ImageView fondoImage;
-    @FXML ImageView dadosImg;
-    @FXML ImageView userImg;
-    @FXML ImageView userRival;
-    @FXML ImageView listaImg;
+    // ImageViews
+    @FXML private ImageView fondoImage;
+    @FXML private ImageView dadosImg;
+    @FXML private ImageView userImg;
+    @FXML private ImageView userRival;
+    @FXML private ImageView listaImg;
 
-    @FXML Label labelPregunta;
-    @FXML Label labelJugador;
-    @FXML Label labelJugador2;
-    @FXML Label tiempoPartida;
-    @FXML Label labelFecha;
+    // Labels
+    @FXML private Label labelPregunta;
+    @FXML private Label labelJugador;
+    @FXML private Label labelJugador2;
+    @FXML private Label tiempoPartida;
+    @FXML private Label labelFecha;
 
-    @FXML TextFlow chat;
-    @FXML ScrollPane chatScroll;
-    @FXML TextField textFieldMensaje;
+    // Botones
+    @FXML private Button buttonEnviar;
+    @FXML private Button btnLstaPreguntas;
+    @FXML private Button btnRespNo;
+    @FXML private Button btnRespSi;
+    @FXML private Button buttonMusica;
+    @FXML private Button buttonModo;
+    @FXML private Button buttonSalir;
+    @FXML private Button buttonSiguienteMusica;
 
-    @FXML Button buttonEnviar;
-    @FXML Button btnLstaPreguntas;
-    @FXML Button btnRespNo;
-    @FXML Button btnRespSi;
-    @FXML Button buttonMusica;
-    @FXML Button buttonModo;
-    @FXML Button buttonSalir;
-    @FXML Button buttonSiguienteMusica;
+    // TextFlows
+    @FXML private TextFlow chat;
 
+    // ScrollPanes
+    @FXML private ScrollPane chatScroll;
 
+    // TextFields
+    @FXML private TextField textFieldMensaje;
+
+    // Lista de imagenes para el tablero
     private final List<Image> imagenes = new ArrayList();
+
+    // Atributo auxiliar para controlar la duración de la partida
     private long segundosTranscurridos = 0L;
 
-    // ---------------------- ATRIBUTOS PARA MANEJAR EL TURNO Y EL CHAT -------------------------
+    // Atributos para manejar los turnos
     private Cliente cliente; // Cliente para comunicarse con el servidor
     private boolean esMiTurno = false; // Booleano para indicar turnos
     private boolean preguntaEnviada = false; // Booleano para saber si ya se envio la pregunta
     private String miNickname = Menu.nickName; // Cadena para saber mi nickname
     private String nickNameOp = ""; // Cadena para saber el nickname del oponente
 
-    private List<Personaje> personajesJuego; // Lista para almacenar la lista del servidor
+    private List<Personaje> personajesJuego; // Lista de personajes del tablero
 
     public int idPersonaje; // Id del personaje del usuario
-    private int volteados = 0;
 
-    //Sonidos
+    private int volteados = 0; // Contador de personajes volteados
+
+    // Sonidos
     public static AudioClip sonidoVoltear;
     public static AudioClip sonidoMandar;
     public static AudioClip sonidoAdivinar;
@@ -128,10 +129,11 @@ public class TableroController extends MenuController implements Initializable, 
     public static AudioClip sonidoTablero;
     public static AudioClip sonidoLista;
 
+    // Metodo que se ejecuta al cargar la escena
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
 
-        //Sonidos
+        //Cargar los sonidos
         sonidoVoltear = new AudioClip(getClass().getResource("/Tablero/Assets/door.mp3").toString());
         sonidoMandar = new AudioClip(getClass().getResource("/Tablero/Assets/send.mp3").toString());
         sonidoAdivinar = new AudioClip(getClass().getResource("/Tablero/Assets/confirm.wav").toString());
@@ -140,18 +142,23 @@ public class TableroController extends MenuController implements Initializable, 
         sonidoTablero = new AudioClip(getClass().getResource("/Tablero/Assets/confirmTab.mp3").toString());
         sonidoLista = new AudioClip(getClass().getResource("/Tablero/Assets/paper.mp3").toString());
 
-        //Musica
-        inicializarMusica();
+        inicializarMusica(); // Metodo para iniicar la música
 
+        // Adapta la aplicación a su versión en pantalla completa o ventana
         Platform.runLater(() -> {
             Stage stage = (Stage)this.rootPane.getScene().getWindow();
             stage.setFullScreen(Menu.fullScreen);
         });
 
-        LocalDate fechaActual = LocalDate.now();
-        DateTimeFormatter formato = DateTimeFormatter.ofPattern("yyyy/MM/dd");
-        String fechaFormato = fechaActual.format(formato);
-        labelFecha.setText(fechaFormato);
+        LocalDate fechaActual = LocalDate.now(); // Variable que almacena la fecha actual
+
+        DateTimeFormatter formato = DateTimeFormatter.ofPattern("yyyy/MM/dd"); // Variable que formatea la fecha
+
+        String fechaFormato = fechaActual.format(formato); // Variable con la fecha formateada
+
+        labelFecha.setText(fechaFormato); // Se asigna la fecha al label correspondiente
+
+        // Se le asignan clases de estilos iguales a los labels de la fecha y del nombre del jugador
         labelFecha.getStyleClass().add("labelTiempo");
         labelJugador.getStyleClass().add("labelTiempo");
 
@@ -159,89 +166,128 @@ public class TableroController extends MenuController implements Initializable, 
         Servidor.partida.setFecha(fechaActual);
         Cliente.partidaCliente.setFecha(fechaActual);
 
-        this.sideBarPane.setVisible(false);
+        this.sideBarPane.setVisible(false); // Se oculta el panel del chat, jugadores y preguntas
 
+        this.labelJugador.setText(Menu.nickName); // Se asigna el nombre del jugador al label correspondiente
+
+        // Se adapta la tamaño de la imagen de fondo a la resolución del dispositivo
         this.fondoImage.fitWidthProperty().bind(this.rootPane.widthProperty());
         this.fondoImage.fitHeightProperty().bind(this.rootPane.heightProperty());
+
+        // Se adapta el tamaño del panel del contenido de la pantalla a la resolución del dispositivo
         this.contentPane.prefWidthProperty().bind(this.rootPane.widthProperty());
         this.contentPane.prefHeightProperty().bind(this.rootPane.heightProperty());
-        this.labelJugador.setText(Menu.nickName);
+
+        // Se adapta el tamaño del panel contenedor de la lista de personajes a la resolución del dispositivo
         this.contenedorListaPer.prefWidthProperty().bind(this.contentPane.widthProperty());
         this.contenedorListaPer.prefHeightProperty().bind(this.contentPane.heightProperty());
+
+        // Se adapta el tamaño del panel que simula sombra de la lista de personajes a la resolución del dispositivo
         this.shadowPanePersonajes.prefWidthProperty().bind(this.contentPane.widthProperty());
         this.shadowPanePersonajes.prefHeightProperty().bind(this.contentPane.heightProperty());
+
+        // Se adapta el tamaño del contenedor de la lista de preguntas a la resolución del dispositivo
         this.contenedorListaPreguntas.prefWidthProperty().bind(this.contentPane.widthProperty());
         this.contenedorListaPreguntas.prefHeightProperty().bind(this.contentPane.heightProperty());
+
+        // Se adapta el tamaño del panel que simula sombra de la lista de preguntas a la resolución del dispositivo
         this.shadowPanePreguntas.prefWidthProperty().bind(this.contentPane.widthProperty());
         this.shadowPanePreguntas.prefHeightProperty().bind(this.contentPane.heightProperty());
+
+        // Se adapta el tamaño del gridPane que contiene el menú de respuesta a la pregunta entrante a la resolución del dispositivo
         this.gridPaneRespuestas.prefWidthProperty().bind(this.contentPane.widthProperty());
         this.gridPaneRespuestas.prefHeightProperty().bind(this.contentPane.heightProperty());
+
+        // Se adapta el tamaño del contenedor de los botones de enviar mensaje y mostrar la lista de preguntas a la resolución del dispositivo
         this.btnsContainer.prefWidthProperty().bind(this.contentPane.widthProperty().multiply(.8));
         this.btnsContainer.prefHeightProperty().bind(this.contentPane.heightProperty().multiply(.5));
 
-
+        // Se adapta el tamaño del textField para escribir un mensaje a la resolución del dispositivo
         this.textFieldMensaje.prefWidthProperty().bind(this.rootPane.widthProperty().multiply(.245));
 
+        // Se adapta el tamaño del botón de enviar pregunta a la resolución del dispositivo
         this.buttonEnviar.prefWidthProperty().bind(rootPane.widthProperty().multiply(0.0525));
         this.buttonEnviar.prefHeightProperty().bind(rootPane.heightProperty().multiply(0.06));
+
+        // Se adapta el tamaño del botón de mostrar la lista de preguntas a la resolución del dispositivo
         this.btnLstaPreguntas.prefWidthProperty().bind(rootPane.widthProperty().multiply(0.04));
         this.btnLstaPreguntas.prefHeightProperty().bind(rootPane.heightProperty().multiply(0.06));
 
+        // Se adapta el tamaño del botón para repsonder con un "NO" a la resolución del dispositivo
         this.btnRespNo.prefWidthProperty().bind(rootPane.widthProperty().divide(10));
         this.btnRespNo.prefHeightProperty().bind(rootPane.heightProperty().divide(8));
+
+        // Se adapta el tamaño del botón para responder con un "SI" a la resolución del dispositivo
         this.btnRespSi.prefWidthProperty().bind(rootPane.widthProperty().divide(10));
         this.btnRespSi.prefHeightProperty().bind(rootPane.heightProperty().divide(8));
 
-        // El campo de mensaje y el boton para enviar el mensaje se encuentran desabilitados
+        // Se adapta el tamaño de la imágen del personaje del usuario a la resolución del dispositivo
+        this.userImg.fitWidthProperty().bind(this.rootPane.widthProperty().divide(6.5));
+        this.userImg.fitHeightProperty().bind(this.rootPane.heightProperty().divide(4.5));
+
+        // Se adapta el tamaño de la imágen del personaje del rival a la resolución del dispositivo
+        this.userRival.fitWidthProperty().bind(this.rootPane.widthProperty().divide(6.5));
+        this.userRival.fitHeightProperty().bind(this.rootPane.heightProperty().divide(4.5));
+
+        // Se adapta el tamaño del ScrollPane del chat a la resolución del dispositivo
+        this.chatScroll.prefWidthProperty().bind(rootPane.widthProperty().multiply(0.32));
+        this.chatScroll.prefHeightProperty().bind(rootPane.heightProperty().multiply(0.52));
+
+        // Se adapta el tamaño del chat a la resolución del dispositivo
+        this.chat.prefWidthProperty().bind(rootPane.widthProperty().multiply(0.32));
+        this.chat.prefHeightProperty().bind(rootPane.heightProperty().multiply(0.52));
+
+        // Se adapta el tamaño de la imagen de la lista de personajes a la resolución del dispositivo
+        this.listaImg.fitWidthProperty().bind(this.rootPane.widthProperty().divide(6.5));
+        this.listaImg.fitHeightProperty().bind(this.rootPane.heightProperty().divide(4.5));
+        // Se adapta el tamaño de la imagen de los dados a la resolución del dispositivo
+        this.dadosImg.fitWidthProperty().bind(this.rootPane.widthProperty().divide(6));
+        this.dadosImg.fitHeightProperty().bind(this.rootPane.heightProperty().divide(4));
+
+        // El campo de mensaje y el boton para enviar el mensaje se encuentran deshabilitados
         // Hasta que se le asigne un turno o se reciba una pregunta
         textFieldMensaje.setDisable(true);
         buttonEnviar.setDisable(true);
 
-        this.userImg.fitWidthProperty().bind(this.rootPane.widthProperty().divide(6.5));
-        this.userImg.fitHeightProperty().bind(this.rootPane.heightProperty().divide(4.5));
-
-        this.userRival.fitWidthProperty().bind(this.rootPane.widthProperty().divide(6.5));
-        this.userRival.fitHeightProperty().bind(this.rootPane.heightProperty().divide(4.5));
-
-        this.chatScroll.prefWidthProperty().bind(rootPane.widthProperty().multiply(0.32));
-        this.chatScroll.prefHeightProperty().bind(rootPane.heightProperty().multiply(0.52));
-
-        this.chat.prefWidthProperty().bind(rootPane.widthProperty().multiply(0.32));
-        this.chat.prefHeightProperty().bind(rootPane.heightProperty().multiply(0.52));
-
+        // Se vincula el metodo "imgMouseEntered" al evento OnMouseEntered de la imágen de los dados
         this.dadosImg.setOnMouseEntered(mouseEvent -> {imgMouseEntered(mouseEvent);});
+        // Se vincula el metodo "imgMouseExited" al evento OnMouseExited de la imágen de los dados
         this.dadosImg.setOnMouseExited(mouseEvent -> {imgMouseExited(mouseEvent);});
 
-        this.listaImg.fitWidthProperty().bind(this.rootPane.widthProperty().divide(6.5));
-        this.listaImg.fitHeightProperty().bind(this.rootPane.heightProperty().divide(4.5));
-
+        // Se vincula el metodo "imgMouseEntered" al evento OnMouseEntered de la imágen de la lista de personajes
         this.listaImg.setOnMouseEntered(mouseEvent -> {imgMouseEntered(mouseEvent);});
+        // Se vincula el metodo "imgMouseExited" al evento OnMouseExited de la imágen de la lista de personajes
         this.listaImg.setOnMouseExited(mouseEvent -> {imgMouseExited(mouseEvent);});
 
+        // Cargar el ícono del botón de enviar pregunta
         Image imagenEnviar = new Image(getClass().getResourceAsStream("/Tablero/Assets/mouseClick.png"));
         ImageView imageView = new ImageView(imagenEnviar);
         imageView.setFitWidth(35);
         imageView.setFitHeight(35);
         buttonEnviar.setGraphic(imageView);
 
+        // Cargar el ícono del botón de la lista de preguntas
         Image imagenPregunta = new Image(getClass().getResourceAsStream("/Tablero/Assets/lista.png"));
         ImageView imageView1 = new ImageView(imagenPregunta);
         imageView1.setFitWidth(35);
         imageView1.setFitHeight(35);
         btnLstaPreguntas.setGraphic(imageView1);
 
+        // Cargar el ícono del botón para cambiar entre pantalla completa y ventana
         Image imagenModo= new Image(getClass().getResourceAsStream("/Menu/Assets/maximizar.png"));
         ImageView imageView2 = new ImageView(imagenModo);
         imageView2.setFitWidth(40);
         imageView2.setFitHeight(40);
         buttonModo.setGraphic(imageView2);
 
+        // Cargar el ícono del botón para salir de la lista de personajes a elegir
         Image imagenSalir = new Image(getClass().getResourceAsStream("/Tablero/Assets/salir.png"));
         ImageView imageView3 = new ImageView(imagenSalir);
         imageView3.setFitWidth(35);
         imageView3.setFitHeight(35);
         buttonSalir.setGraphic(imageView3);
 
+        // Cargar el ícono del botón para cambiar la música
         Image imagenFondo = new Image(getClass().getResourceAsStream("/Menu/Assets/cambiarMusica.png"));
         ImageView imageView4 = new ImageView(imagenFondo);
         imageView4.setFitWidth(45);
@@ -263,119 +309,151 @@ public class TableroController extends MenuController implements Initializable, 
             imgV.setFitHeight(40);
             buttonMusica.setGraphic(imgV);
         }
-    } // Fin Initialize
+    }
 
+    // Metodo para asignar el oponente al usuario actual
     public void setOponente(String oponente){
-        this.nickNameOp = oponente;
-        this.labelJugador2.setText(oponente);
+        this.nickNameOp = oponente; // Almacenar el Nickname del oponente
+        this.labelJugador2.setText(oponente); // Asignar el Nickname del oponente al label correspondiente
 
         // Mandamos el nickname del oponente a la base de datos
         Cliente.partidaCliente.setJugador2(this.nickNameOp);
     }
 
+    // Metodo que muestra la lista de preguntas
     public void listaPreguntas(){
-        this.shadowPanePreguntas.setVisible(true);
-        this.contenedorListaPreguntas.setVisible(true);
-        cargarListaPreguntas();
+        this.shadowPanePreguntas.setVisible(true); // Mostrar el panel que simula la sombra de la lista de preguntas
+        this.contenedorListaPreguntas.setVisible(true); // Mostrar el contenedor de la lista de preguntas
+        cargarListaPreguntas(); // Metodo para cargar las preguntas en un ListView
     }
 
+    // Metodo para cerrar el panel de la lista de preguntas
     public void salirPreguntas(){
-        this.shadowPanePreguntas.setVisible(false);
-        this.contenedorListaPreguntas.setVisible(false);
+        this.shadowPanePreguntas.setVisible(false); // Ocultar el panel que simula la sombra de la lista de preguntas
+        this.contenedorListaPreguntas.setVisible(false); // Ocultar el contenedor de la lista de preguntas
     }
 
+    // Metodo para cargar las preguntas al ListView
     private void cargarListaPreguntas() {
+        // Se pide la lista de preguntas a la base de datos
         List<String> preguntasDesdeDB = PreguntasDB.obtenerPreguntas();
+        // Se adapta la lista a un objeto de tipo ObservableList
         ObservableList<String> preguntasObservables = FXCollections.observableArrayList(preguntasDesdeDB);
 
+        // Se crea la instancia del ListView que mostrará las preguntas, asignándole la lista observable anteriormente creada
         ListView<String> listViewPreguntas = new ListView<>(preguntasObservables);
-        listViewPreguntas.getStyleClass().add("listView");
-        listViewPreguntas.setOrientation(Orientation.VERTICAL);
-        listViewPreguntas.setStyle("-fx-font-family: Cherry Bomb One;");
-        listViewPreguntas.setStyle("-fx-font-size: 14px;");
 
-        Consumer<String> accionSeleccionarPregunta = pregunta -> {
-            textFieldMensaje.setText(pregunta);
-            salirPreguntas();
+        // Se le asigna una clase para sus estilos
+        listViewPreguntas.getStyleClass().add("listView");
+        listViewPreguntas.setOrientation(Orientation.VERTICAL); // Se le asigna una orientación vertical
+
+        // Se crea un consumidor que definirá qué pasa cuando se selecciona una de las preguntas
+        Consumer<String> accionSeleccionarPregunta = pregunta -> { // Al presionar una pregunta
+            textFieldMensaje.setText(pregunta); // Se añade esa pregunta al TextField del chat
+            salirPreguntas(); // Se cierra el menú de las preguntas
         };
 
-
+        // Se cargan todos los índices de la lista con las preguntas y un botón que dice "Preguntar"
         listViewPreguntas.setCellFactory(param -> new ListCell<String>() {
-            private final BorderPane layout = new BorderPane();
-            private final Label labelPregunta = new Label();
-            private final Button botonPreguntar = new Button("Preguntar");
+            private final BorderPane layout = new BorderPane(); // Se crea un panel para almacenar la pregunta y el botón
+            private final Label labelPregunta = new Label(); // Se crea el Label para la pregunta
+            private final Button botonPreguntar = new Button("Preguntar"); // Se crea el botón para preguntar
 
-            {
-                layout.setLeft(labelPregunta);
-                layout.setRight(botonPreguntar);
+            { // Se crea el Layout para el panel de la pregunta y el botón
+                layout.setLeft(labelPregunta); // Se asigna el label de la pregunta al lado izquierdo del panel
+                layout.setRight(botonPreguntar); // Se asigna el botón al lado derecho del panel
+
+                // Se asigna un márgen al panel de 10 pixeles hacia la derecha para separar la pregunta y el botón
                 BorderPane.setMargin(labelPregunta, new Insets(0, 10, 0, 0));
 
-                botonPreguntar.setOnAction(event -> {
+                // Se le asigna un contenido al evento SetOnAction al botón
+                botonPreguntar.setOnAction(event -> { // Al presionar el botón
                     if (getItem() != null && !getItem().isEmpty()) {
+                        /*
+                           Se llama al consumidor anteriormente creado, el cual pondrá la pregunta en el chat y
+                           cerrará el menú de preguntas
+                        */
                         accionSeleccionarPregunta.accept(getItem());
                     }
                 });
             }
 
+            // Metodo que agrega la pregunta y el botón al ListView
             @Override
             protected void updateItem(String pregunta, boolean empty) {
-                super.updateItem(pregunta, empty);
+                super.updateItem(pregunta, empty); // Se lee cada pregunta
 
-                if (empty || pregunta == null) {
-                    setGraphic(null);
-                } else {
-                    labelPregunta.setText(pregunta);
-                    labelPregunta.setWrapText(true);
-                    setGraphic(layout);
+                if (empty || pregunta == null) { // Si se recibe una pregunta vacía, o un null del metodo updateItem del padre
+                    setGraphic(null); // No se crea ningún índice de la lita
+                } else { // En caso de recibir algo
+                    labelPregunta.setText(pregunta); // Se le asigna el texto de la pregunta al label
+                    labelPregunta.setWrapText(true); // Se adapta el texto al label
+                    setGraphic(layout); // Se inserta el layout del panel que contiene el label y el botón al ListView
                 }
             }
         });
 
-        gridPanePreguntas.add(listViewPreguntas, 0, 1);
+        gridPanePreguntas.add(listViewPreguntas, 0, 1); // Se añade el ListView al gridPane contenedor de la lista de preguntas
     }
 
+    // Metodo que carga las imagenes de los personajes para mostrarlos en el ImageView de selección de personaje
     private void cargarListaPersonajes() {
-        ObservableList<Personaje> personajes = FXCollections.observableArrayList(personajesJuego);
+        // Se crea una lista observable a partir de la lista de personajes que es parámetro de la clase
+        ObservableList<Personaje> personajes = FXCollections.observableArrayList(this.personajesJuego);
+
+        // Se crea el ListView a mostrar con la lista observable anterior
         ListView<Personaje> listViewPersonajes = new ListView((ObservableList)personajes);
+        // Se le asigna una orientación vertical
         listViewPersonajes.setOrientation(Orientation.VERTICAL);
 
+        // Se cargan todos los índices de la lista con una imágen, un label y su contenedor
         listViewPersonajes.setCellFactory(param -> new ListCell<Personaje>(){
-            private final ImageView imageView = new ImageView();
-            private final Label label = new Label();
-            private final VBox layout = new VBox(10, imageView, label);
+            private final ImageView imageView = new ImageView(); // Se crea la instancia del ImageView de la imágen
+            private final Label label = new Label(); // Se crea el label para el nombre del personaje
+            private final VBox layout = new VBox(10, imageView, label); // Se crea su contenedor, asignando la imagen y el label
 
+            // Metodo que agrega los contenedores al ListView
             @Override
             protected void updateItem(Personaje personaje, boolean empty){
-                super.updateItem(personaje, empty);
+                super.updateItem(personaje, empty); // Se lee cada personaje
 
-                if(empty || personaje == null){
+                if(empty || personaje == null){ // En caso de recibir algún dato nulo
+                    // No se asigna nada al ImageView
                     setText(null);
                     setGraphic(null);
-                } else {
-                    Image img = personaje.getImagenFX();
-                    imageView.setImage(img);
+                } else { // En caso de recibir algo
+                    Image img = personaje.getImagenFX(); // Se recupera la imagen del personaje actual iterado
+                    imageView.setImage(img); // Se le asigna la imagen al ImageView anteriormente creado
+                    // Se configura la imagen para estilizarla
                     imageView.setFitWidth(100);
                     imageView.setPreserveRatio(true);
-                    label.setText(personaje.getNombre());
-                    layout.setAlignment(Pos.CENTER);
-                    setGraphic(layout);
+
+                    label.setText(personaje.getNombre()); // Se asigna el nombre del personaje actual iterado al label
+                    layout.setAlignment(Pos.CENTER); // Se alinean todos los objetos en el centro
+                    setGraphic(layout); // Se asigna el contenedor al índice actual de la lista
                 }
             }
         });
 
+        // Se le asigna un modelo para cuando se selecciona algún índice
         listViewPersonajes.getSelectionModel().selectedItemProperty().addListener((obs, oldSelection, newSelection) -> {
-            if (newSelection != null) {
-                Image img = newSelection.getImagenFX();
-                this.userImg.setImage(img);
-                this.idPersonaje = newSelection.getIdTablero() + 1;
-                System.out.println(this.idPersonaje);
-                cerrarListaPersonajes(null);
-                this.seleccionPersonaje.setVisible(false);
-                this.sideBarPane.setVisible(true);
+            if (newSelection != null) { // Si existe alguna selección
+                Image img = newSelection.getImagenFX(); // Se obtiene la imágen seleccionada
 
-                contenedorListaPer.setVisible(false);
-                shadowPanePersonajes.setVisible(false);
-                reasignarMetodos();
+                this.userImg.setImage(img); // Se le asigna la imagen seleccionada a la imagen del usuario en el tablero
+
+                // Se almacena el índice de la imagen seleccionada
+                this.idPersonaje = newSelection.getIdTablero() + 1;
+
+                cerrarListaPersonajes(null); // Se cierra la lista de personajes
+
+                this.seleccionPersonaje.setVisible(false); // Se oculta el panel de selección de personajes
+                contenedorListaPer.setVisible(false); // Se oculta el contenedor de la lista de personajes
+                shadowPanePersonajes.setVisible(false); // Se oculta el panel que simula la sombra de la lista de personajes
+
+                this.sideBarPane.setVisible(true); // Se muestra el panel de jugadores, chat y  lista de preguntas
+
+                reasignarMetodos(); // Se reasignan los metodos de las imagenes del tablero
 
                 // Determinamos el Id y llamamos al metodo de personaje elegido
                 int idPersonajeSelec = newSelection.getIdTablero() + 1;
@@ -383,231 +461,275 @@ public class TableroController extends MenuController implements Initializable, 
             }
         });
 
+        // Se agrega la lista de personajes a la pantalla 
         gridPaneListaPer.add(listViewPersonajes, 0, 1);
     }
 
-    // Metodo para avisar que se ejigio personaje
+    // Metodo para avisar al servidorque se ejigio personaje
     private void personajeElegido(int idPersonajeSelec) {
         //Guardamos el Id del personaje
         this.idPersonaje = idPersonajeSelec;
 
-        // Avisamos que el personaje se ha elegido
+        // Avisamos al servidor que el personaje se ha elegido
         cliente.enviarMensaje("PERSONAJE_ELEGIDO", String.valueOf(idPersonajeSelec));
         agregarMensajeAlChat("Sistema", "Has elegido tu personaje. Esperando a tu oponente ;)");
 
         // Deshabilita la selección de personaje y habilita la interfaz de juego
         this.seleccionPersonaje.setVisible(false);
-        this.sideBarPane.setVisible(true); // Asumo que esto muestra el chat..
+        this.sideBarPane.setVisible(true);
     }
 
+    // Metodo que entra en la fase de elección de personaje del jugador
     private void elegirPersonaje(){
-        this.seleccionPersonaje.setVisible(true);
-
-        this.dadosImg.fitWidthProperty().bind(this.rootPane.widthProperty().divide(6));
-        this.dadosImg.fitHeightProperty().bind(this.rootPane.heightProperty().divide(4));
+        this.seleccionPersonaje.setVisible(true); // Se hace visible el panel de selección de personaje
     }
 
+    // Metodo que se ejecuta cuando se elige un personaje del tablero
     public void eleccionTablero(MouseEvent e){
-        ImageView imgView = (ImageView)e.getSource();
+        StackPane stack = (StackPane) e.getSource(); // Obtenemos el panel al que se dió click
+
+        // Se reproduce un sonido al dar click
         sonidoTablero.setVolume(0.2);
         sonidoTablero.play();
 
-        imgView.setEffect(null);
+        // Como en el tablero, las imagenes estan por debajo de un "StackPane", debemos iterar sobre este para llegar a su hijo que es la imagen
+        for(Node hijo: stack.getChildren()){
+            if(hijo instanceof ImageView){ // Al encontrar el hijo del StackPane que es la imagen
+                hijo.setEffect(null); // Se le quita cualquier efecto que pueda tener
+                Image img = ((ImageView)hijo).getImage(); // Se crea una instancia de una nueva imagen igual a la que se dio click
+                this.userImg.setImage(img); // Se le asigna al usuario esa misma imagen
+                break;
+            }
+        }
 
-        Image img = imgView.getImage();
-        this.userImg.setImage(img);
+        this.seleccionPersonaje.setVisible(false); // Se oculta el panel de selección de personaje
+        this.sideBarPane.setVisible(true); // Se muestra el panel del chat, los jugadores y las preguntas
 
-        this.seleccionPersonaje.setVisible(false);
-        this.sideBarPane.setVisible(true);
+        reasignarMetodos(); // Se reasignan los métodos
 
-        reasignarMetodos();
+        this.idPersonaje = gridTable.getChildren().indexOf(stack); // Se almacena el id del personaje seleccionado
 
-        int idPersonajeSelec = gridTable.getChildren().indexOf(imgView);
-
-        // Cronometro sincronizada jaja xd lol
-        personajeElegido(idPersonajeSelec);
+        personajeElegido(this.idPersonaje); // Metodo que indica al servidor que un personaje se eligió
     }
 
+    // Metodo que se ejecuta cuando se da click en la imagen de los dados (Personaje aleatorio)
     public void eleccionRandom(){
-        Random random = new Random();
+        Random random = new Random(); // Se crea una instancia de la clase Random
 
+        // Se reproduce un sonido
         sonidoDados.setVolume(0.2);
         sonidoDados.play();
 
-        this.dadosImg.setEffect(null);
+        this.dadosImg.setEffect(null); // Se le quita cualquier efecto que pueda tener a la imagen de los dados
+
+        // Se le quitan los eventos aplicados a la imagen de los dados
         this.dadosImg.setOnMouseEntered(null);
         this.dadosImg.setOnMouseExited(null);
 
-        int rand = random.nextInt(24);
+        int rand = random.nextInt(24); // Se crea un nuevo numero random entre el 0 y el 23
 
+        // Se obtiene el StackPane que se encuentra en el índice del número random generado
         StackPane stackPane = (StackPane)this.gridTable.getChildren().get(rand);
+        // Se obtiene la imagen que se encuentra en aquel StackPane
         ImageView imgView = (ImageView)stackPane.getChildren().get(0);
 
         Image img = imgView.getImage();
-        this.userImg.setImage(img);
+        this.userImg.setImage(img); // Esta imagen obtenida se le asigna al usuario
 
-        this.seleccionPersonaje.setVisible(false);
-        this.sideBarPane.setVisible(true);
+        this.seleccionPersonaje.setVisible(false); // Se oculta el panel de selección de personaje
+        this.sideBarPane.setVisible(true); // Se hace visible el panel del chat, usuarios y preguntas
 
-        reasignarMetodos();
+        reasignarMetodos(); // Se reasignan los metodos a los personajes dle tablero
 
-        // Cronometro sincronizada jaja xd lol
-        personajeElegido(rand);
+        this.idPersonaje = rand; // Se almacena el id del personaje seleccionado
+
+        personajeElegido(rand); // Se informa al servidor que se eligió personaje
     }
 
+    // Metodo que se ejecuta cuando se elige un personaje de la lista de personajes
     public void eleccionLista(){
+        // Se reproduce un sonido
         sonidoLista.setVolume(0.2);
         sonidoLista.play();
 
-        contenedorListaPer.setVisible(true);
-        shadowPanePersonajes.setVisible(true);
+        contenedorListaPer.setVisible(true); // Se muestra el contenedor de la lista de personajes
+        shadowPanePersonajes.setVisible(true); // Se muestra el panel que simula la sombra de la lista de personajes
     }
 
+    // Metodo para cerrar la lista de personajes
     public void cerrarListaPersonajes(ActionEvent e){
-        contenedorListaPer.setVisible(false);
-        shadowPanePersonajes.setVisible(false);
+        contenedorListaPer.setVisible(false); // Oculta el contenedor de la lista de personajes
+        shadowPanePersonajes.setVisible(false); // Oculta el panel que simula la sombra de la lista de personajes
     }
 
+    // Metodo que reasigna los metodos a los StackPane del tablero
     private void reasignarMetodos(){
-        for(int i=1; i<24; i++){
-            this.gridTable.getChildren().get(i).setOnMouseClicked(null);
+        for(int i=1; i<24; i++) { // Ciclo para recorrer cada celda del tablero
+            this.gridTable.getChildren().get(i).setOnMouseClicked(null); // Se quita el evento OnMouseClicked
+            // Se vinbula el evento OnMouseEntered con el metodo MouseEntro
             this.gridTable.getChildren().get(i).setOnMouseEntered(mouseEvent -> {mouseEntro(mouseEvent);});
+            // Se vinbula el evento OnMouseExited con el metodo MouseSalio
             this.gridTable.getChildren().get(i).setOnMouseExited(mouseEvent -> {mouseSalio(mouseEvent);});
-
-            StackPane stack = (StackPane)this.gridTable.getChildren().get(i);
-
-            for (Node hijo : stack.getChildren()) {
-                if (hijo instanceof ImageView) {
-                    hijo.setOnMouseClicked(null);
-                    hijo.setOnMouseEntered(null);
-                    hijo.setOnMouseExited(null);
-                    break;
-                }
-            }
         }
     }
 
+    // Metodo que se ejecuta cuando el mouse entra a cualquier StackPane del tablero
     private void mouseEntro(MouseEvent e){
-        StackPane stack = (StackPane)e.getSource();
-        if(stack.getChildren().getFirst() instanceof ImageView) {
+        StackPane stack = (StackPane)e.getSource(); // Se obtiene el StackPane en el que se encuentra el mouse
+
+        if(stack.getChildren().getFirst() instanceof ImageView) { // Si el StackPane tiene como hijo un ImageView
+            // Se crea una instancia de un Image que almacena la imagen dentro del StackPane
             Image img = ((ImageView) stack.getChildren().getFirst()).getImage();
-            int indice = imagenes.indexOf(img);
+            int indice = imagenes.indexOf(img); // Se busca el índice en el cual se encuentra aquella imagen
 
             int row = 0, col = 0;
 
-            if (indice > 5) {
-                row = indice / 6;
-                col = indice % 6;
-            } else {
+            // Se convierte aquel índice a coordenadas dentro del tablero
+            if (indice > 5) { // Si el índice es mayor al total de columnas del tablero
+                row = indice / 6; // El renglón será el índice entre 6
+                col = indice % 6; // La columna será el renglon módulo 6
+            } else { // De lo contrario, será la primera fila, y la columna será igual al índice
                 row = 0;
                 col = indice;
             }
 
+            // Se crea una nueva instancia de un BorderPane
             BorderPane menuPersonajeContenedor = new BorderPane();
+            // Se crea una nueva instancia de un GridPane
             GridPane menuPersonaje = new GridPane();
 
-            menuPersonaje.setAlignment(Pos.CENTER);
-            menuPersonaje.setHgap(4);
+            menuPersonaje.setAlignment(Pos.CENTER); // se centra el ontenido del gridPane
+            menuPersonaje.setHgap(4); // Se asigna una separación de 4 pixeles entre columnas
 
+            // Se cargan los íconos de adivinar y de voltear la tarjeta
             Image iconAdivinar = new Image(getClass().getResourceAsStream("/Tablero/Assets/adivinar.png"));
             Image iconVoltear = new Image(getClass().getResourceAsStream("/Tablero/Assets/voltear.png"));
 
+            // Se crean los ImageViews para los íconos
             ImageView iconAdivinarIV = new ImageView(iconAdivinar);
             ImageView iconVoltearIV = new ImageView(iconVoltear);
 
+            // Se redimensionan los íconos
             iconAdivinarIV.setFitWidth(24);
             iconAdivinarIV.setFitHeight(24);
 
             iconVoltearIV.setFitWidth(24);
             iconVoltearIV.setFitHeight(24);
 
+            // Se crea la instancia del botón de voltear
             Button botonVoltear = new Button();
             botonVoltear.setMaxWidth(Double.MAX_VALUE);
-            botonVoltear.setGraphic(iconVoltearIV);
+            botonVoltear.setGraphic(iconVoltearIV); // Se le asigna el ícono de voltear
 
+            // Se crea el botón de adivinar
             Button botonAdivinar = new Button();
-
             botonVoltear.setMaxWidth(Double.MAX_VALUE);
-            botonAdivinar.setGraphic(iconAdivinarIV);
+            botonAdivinar.setGraphic(iconAdivinarIV); // Se le asigna el ícono de adivinar
 
+            // Se adapta el tamaño de los botones a la resolución del dispositivo
             botonVoltear.prefWidthProperty().bind(rootPane.widthProperty().divide(35));
             botonVoltear.prefHeightProperty().bind(rootPane.heightProperty().divide(25));
-
             botonAdivinar.prefWidthProperty().bind(rootPane.widthProperty().divide(35));
             botonAdivinar.prefHeightProperty().bind(rootPane.heightProperty().divide(25));
 
+            // Se crea un nuevo efecto de sombra
             Effect sombra = new DropShadow();
 
+            // Se le asigna el efecto a los dos botones
             botonAdivinar.setEffect(sombra);
             botonVoltear.setEffect(sombra);
 
-            botonAdivinar.setOnMouseClicked(mouseEvent -> {
+            // Se le asigna una acción al evento OnMouseClicked del botón de adivinar
+            botonAdivinar.setOnMouseClicked(mouseEvent -> { // Si se presiona el botón
                 try {
-                    adivinar(mouseEvent, indice);
-                } catch (IOException ex) {
-                    throw new RuntimeException(ex);
-                }
-            });
-            botonVoltear.setOnMouseClicked(mouseEvent -> {
-                try {
-                    voltear(mouseEvent, indice);
+                    adivinar(mouseEvent, indice); // Metodo que indica que se adivinó el personaje con tal índice
                 } catch (IOException ex) {
                     throw new RuntimeException(ex);
                 }
             });
 
-            if(personajesJuego.get(indice).isTachado()){
-                botonAdivinar.setDisable(true);
-            } else{
-                botonAdivinar.setDisable(false);
+            // Se le asigna una acción al evento OnMouseClicked del botón de voltear
+            botonVoltear.setOnMouseClicked(mouseEvent -> { // Si se presiona el botón
+                try {
+                    voltear(mouseEvent, indice); // Metodo para voltear la tarjeta con tal indice
+                } catch (IOException ex) {
+                    throw new RuntimeException(ex);
+                }
+            });
+
+            if(personajesJuego.get(indice).isTachado()){ // En caso de que el personaje ya este tachado
+                botonAdivinar.setDisable(true); // Se deshabilida el botón de adivinar
+            } else{ // De lo contrario
+                botonAdivinar.setDisable(false); // Se habilita el botón de adivinar
             }
 
-            menuPersonaje.add(botonVoltear, 0, 0);
-            menuPersonaje.add(botonAdivinar, 1, 0);
-            menuPersonajeContenedor.setBottom(menuPersonaje);
+            menuPersonaje.add(botonVoltear, 0, 0); // Se añade al gridPane el botón de voltear
+            menuPersonaje.add(botonAdivinar, 1, 0); // Se añade al gripane el botón de adivinar
+            menuPersonajeContenedor.setBottom(menuPersonaje); // Se añade el gridPane a la parte baja del borderPane
 
-            stack.getChildren().add(menuPersonajeContenedor);
+            stack.getChildren().add(menuPersonajeContenedor); // Se añade el borderPane al stack que esta debajo del mouse
         }
     }
 
+    // Metodo para detectar que el mouse salió del personaje
     private void mouseSalio(MouseEvent e){
-        StackPane stack = (StackPane)e.getSource();
+        StackPane stack = (StackPane)e.getSource(); // Se obtiene el stackPane donde se encuentra el personaje
 
-        for (Node hijo : stack.getChildren()) {
-            if (hijo instanceof BorderPane) {
-                stack.getChildren().remove(hijo);
+        for (Node hijo : stack.getChildren()) { // Recorremos los hijos del stackPane
+            if (hijo instanceof BorderPane) { // Si el hijo actual es un BorderPane
+                stack.getChildren().remove(hijo); // Se elimina aquel hijo, dejando la pura imágen
                 break;
             }
         }
     }
 
+    // Metodo para voltear las tarjetas de los personajes
     private void voltear(MouseEvent e, int indice) throws IOException {
+        // Se obtiene el StackPane del índice recibido como parámetro
         StackPane stack = (StackPane)gridTable.getChildren().get(indice+1);
 
-        for (Node hijo : stack.getChildren()) {
-            if (hijo instanceof ImageView) {
-                if(personajesJuego.get(indice).isTachado()){
-                    hijo.setEffect(null);
-                } else{
-                    Effect efecto = new SepiaTone();
-                    hijo.setEffect(efecto);
+        for (Node hijo : stack.getChildren()) { // Se recorren los hijos del stackPane
+            if (hijo instanceof ImageView) { // Si el hijo es un ImageView
+                if(personajesJuego.get(indice).isTachado()){ // Si el personaje actual ya está tachado
+                    hijo.setEffect(null); // Se le quita el efecto
+                    personajesJuego.get(indice).setTachado(false); // Se le quita lo tachado
+                    this.volteados--; // Se disminuye el conteo de personajes volteados en el tablero
+                } else{ // Si no esta tachado aún
+                    Effect efecto = new SepiaTone(); // Se crea un efecto sepia
+                    hijo.setEffect(efecto); // Se le aplica el efecto a la imagen del personaje
+
+                    personajesJuego.get(indice).setTachado(true); // Se tacha el personaje
+                    this.volteados++; // Se aumenta el conteo de personajes volteados en el tablero;
+
+                    if(this.volteados == 24){ // Si ya se voltearon todos los personajes
+                        TerminarPartidaController.estado = false; // Se asigna la variable de estado global como que perdió el usuario
+
+                        // Se carga el archivo FXML de la pantalla de ganar / perder y la muestra
+                        Parent root = FXMLLoader.load(getClass().getResource("/TerminarPartida/TerminarPartida.fxml"));
+                        Scene scene = new Scene(root);
+                        scene.getStylesheets().add(getClass().getResource("/TerminarPartida/TerminarPartidaStyles.css").toExternalForm());
+                        Stage stage = new Stage();
+                        stage = (Stage)((Node) e.getSource()).getScene().getWindow();
+                        stage.hide();
+                        stage.setScene(scene);
+                        stage.show();
+                    }
                 }
-                sonidoBloqueado.setVolume(0.2);
-                sonidoBloqueado.play();
-                break;
+                continue;
             }
-            if (hijo instanceof BorderPane){
+
+            if (hijo instanceof BorderPane){ // Si el hijo es un BorderPane
+                // Se obtiene el GridPane de la parte inferior del BorderPane
                 GridPane grid = (GridPane)((BorderPane) hijo).getBottom();
 
+                // Si el personaje de aquel índice ya esta tachado, se deshabilita el botón de adivinar
                 if(personajesJuego.get(indice).isTachado()) grid.getChildren().get(1).setDisable(true);
-                else grid.getChildren().get(1).setDisable(true);
+                else grid.getChildren().get(1).setDisable(true); // Si no, se habilita
 
-                System.out.println(grid.getChildren().get(0));
-                System.out.println(grid.getChildren().get(1));
-
+                // Se reproduce un sonido
                 sonidoVoltear.setVolume(0.2);
                 sonidoVoltear.play();
-                break;
+                continue;
             }
         }
 
@@ -615,30 +737,14 @@ public class TableroController extends MenuController implements Initializable, 
         Servidor.partida.setTiempo(java.time.Duration.ofSeconds(segundosTranscurridos));
         Cliente.partidaCliente.setTiempo(java.time.Duration.ofSeconds(segundosTranscurridos));
 
+        // Se inserta la partida en la base de datos
         PartidaDB.insertarPartida(Servidor.partida);
         PartidaDB.insertarPartida(Cliente.partidaCliente);
-
-        if(personajesJuego.get(indice).isTachado()){
-            personajesJuego.get(indice).setTachado(false);
-            this.volteados--;
-        } else{
-            personajesJuego.get(indice).setTachado(true);
-            this.volteados++;
-            if(this.volteados == 24){
-                TerminarPartidaController.estado = false;
-                Parent root = FXMLLoader.load(getClass().getResource("/TerminarPartida/TerminarPartida.fxml"));
-                Scene scene = new Scene(root);
-                scene.getStylesheets().add(getClass().getResource("/TerminarPartida/TerminarPartidaStyles.css").toExternalForm());
-                Stage stage = new Stage();
-                stage = (Stage)((Node) e.getSource()).getScene().getWindow();
-                stage.hide();
-                stage.setScene(scene);
-                stage.show();
-            }
-        }
     }
 
+    // Metodo para adivinar el personaje
     private void adivinar(MouseEvent e, int indice) throws IOException {
+        // Se reproduce un sonido
         sonidoAdivinar.setVolume(0.2);
         sonidoAdivinar.play();
 
@@ -661,6 +767,7 @@ public class TableroController extends MenuController implements Initializable, 
         stage.show();*/
     }
 
+    // Metodo para asignar el cliente del servidor
     public void setCliente(Cliente cliente) {
         this.cliente = cliente;
 
@@ -674,7 +781,7 @@ public class TableroController extends MenuController implements Initializable, 
         System.out.println("TableroController: Cliente asignado y listeners configurados");
     }
 
-    // ------------------ IMPLEMENTACION DE LOS LISTENER ------------------
+    // Implementación de los Listeners
     public void onPersonajesRecibidos(List<Personaje> personajes) {
         Platform.runLater(() -> {
             System.out.println("TableroController: Lista de personajes recibida");
@@ -706,46 +813,90 @@ public class TableroController extends MenuController implements Initializable, 
         });
     }
 
+    // Metodo para almacenar las imagenes de cada personaje en una lista de tipo Image
     private void cargarListaImagenes(){
         for(int i=0; i<(gridTable.getRowCount()*gridTable.getColumnCount()); i++){
             this.imagenes.add(personajesJuego.get(i).getImagenFX());
         }
     }
 
-    //Esta la configuaran para que muestre los personajes en el tablero
+    // Metodo para mostrar los personajes en el tablero
     public void mostrarPersonajesEnTablero(){
-        int indice = 0;
+        int indice = 0; // Indice de la lista de imagenes
 
         for(int i = 0; i < 4; i++) {
             for(int j = 0; j < 6; j++) {
-                Image img = (Image)this.imagenes.get(indice);
-                ImageView imageView = new ImageView(img);
+                Image img = (Image)this.imagenes.get(indice); // Se crea una instancia de una Image
+                ImageView imageView = new ImageView(img); // Se le asigna a un ImageView
+
+                // Se adapta el tamaño de la imagen a la celda del tablero
                 imageView.fitWidthProperty().bind(this.gridTable.widthProperty().divide(6).subtract(4));
                 imageView.fitHeightProperty().bind(this.gridTable.heightProperty().divide(4).subtract(4));
                 imageView.setPreserveRatio(false);
-                imageView.setOnMouseClicked(mouseEvent -> {eleccionTablero(mouseEvent);});
-                imageView.setOnMouseEntered(mouseEvent -> {imgMouseEntered(mouseEvent);});
-                imageView.setOnMouseExited(mouseEvent -> {imgMouseExited(mouseEvent);});
 
+                // Se crea un nuevo StackPane
                 StackPane stack = new StackPane();
-                stack.getChildren().add(imageView);
-                this.gridTable.add(stack, j, i);
-                indice++;
+                stack.getChildren().add(imageView); // Se le añade el ImageView al stackPane
+
+                // Se le asignan los eventos necesarios al stackPane (MouseEntered, MouseExited y MouseClicked)
+                stack.setOnMouseClicked(mouseEvent -> {eleccionTablero(mouseEvent);});
+                stack.setOnMouseEntered(mouseEvent -> {imgMouseEntered(mouseEvent);});
+                stack.setOnMouseExited(mouseEvent -> {imgMouseExited(mouseEvent);});
+
+                this.gridTable.add(stack, j, i); // Se añade el stackPane al tablero
+                indice++; // Se aumenta el índice actual de la lista de imagenes
             }
         }
     }
 
+    // Metodo para determinar si el mouse entró a la imagen en la selección de personaje
     private void imgMouseEntered(MouseEvent e){
-        ImageView imgView = (ImageView)e.getSource();
-        Effect effect = new Glow(0.6);
-        imgView.setEffect(effect);
+        /*
+        * Si el mouse está encima de un ImageView, significa que está colocado sobre la imagen de los dados
+        * o de la lista. En caso contrario, si está encima de un StackPane, significa que está colocado sobre
+        * algún personaje del tablero.
+        */
+
+        if(e.getSource() instanceof ImageView){ // Si está encima de un ImageView
+            Effect effect = new Glow(0.6); // Se crea un efecto de brillo
+            ImageView imageView = (ImageView)e.getSource(); // Se obtiene el ImageView en el que está el mouse
+            imageView.setEffect(effect); // Se le aplica el efecto al ImageView
+        } else if(e.getSource() instanceof StackPane){ // En caso de estar sobre un Stackpane
+            StackPane stack = (StackPane) e.getSource(); // Se obtiene el StackPane en el que está el mouse
+
+            for(Node hijo : stack.getChildren()){ // Se recorren los hijos del StackPane
+                if(hijo instanceof ImageView){ // Si el hijo actual es un ImageView
+                    Effect effect = new Glow(0.6); // Se crea un nuevo efecto de brillo
+                    hijo.setEffect(effect); // Se le aplica el efecto al hijo
+                }
+            }
+        }
     }
 
+    // Metodo para determinar si el mouse salió de la imagen en la selección de personaje
     private void imgMouseExited(MouseEvent e){
-        ImageView imgView = (ImageView)e.getSource();
-        imgView.setEffect(null);
+         /*
+         * Si el mouse está encima de un ImageView, significa que está colocado sobre la imagen de los dados
+         * o de la lista. En caso contrario, si está encima de un StackPane, significa que está colocado sobre
+         * algún personaje del tablero.
+         *
+         */
+
+        if(e.getSource() instanceof ImageView){ // Si esta encima de un ImageView
+            ImageView imageView = (ImageView)e.getSource(); // Se obtiene el ImageView en el que está el mouse
+            imageView.setEffect(null); // Se le quita cualquier efecto que tuviera el ImageView
+        } else if(e.getSource() instanceof StackPane){ // Si el mouse está encima de un StackPane
+            StackPane stack = (StackPane) e.getSource(); // Se obtiene el StackPane en el que se encuentra el mouse
+
+            for(Node hijo : stack.getChildren()){ // Se recorren los hijos del StackPane
+                if(hijo instanceof ImageView){ // Si el hijo es un ImageView
+                    hijo.setEffect(null); // Se le quita cualquier efecto que tuviera el ImageView
+                }
+            }
+        }
     }
 
+    // Metodo para enviar preguntas al oponente
     public void enviarMensaje(ActionEvent e) {
         String mensaje = textFieldMensaje.getText().trim();
         if (mensaje.isEmpty()) {
@@ -790,15 +941,14 @@ public class TableroController extends MenuController implements Initializable, 
     // Metoddo para agregar los mensajes al TextFlow del chat
     private void agregarMensajeAlChat(String nick, String mensaje) {
         Platform.runLater(() -> {
-            Text nickText = new Text(nick + ": ");
-            nickText.setFont(Font.font("System", FontWeight.BOLD, 22));
+            // Se crean dos textos diferentes para que el primero, el que contiene el nombre del jugador, esté en negritas y resalte más
+            Text nickText = new Text(nick + ": "); // Se crea un nuevo texto con el nickName del jugador y un ":"
+            nickText.setFont(Font.font("System", FontWeight.BOLD, 22)); // Se le pone la fuente deseada
 
-            Text mensajeText = new Text(mensaje + "\n");
-            mensajeText.setFont(Font.font("System", FontWeight.NORMAL, 20));
+            Text mensajeText = new Text(mensaje + "\n"); // Se crea otro texto con el mensaje y un salto de línea
+            mensajeText.setFont(Font.font("System", FontWeight.NORMAL, 20)); // Se le pone la fuente deseada
 
-            chat.getChildren().addAll(nickText, mensajeText);
-
-            //AQUI PODEMOS AGREGAR EL SCROLL
+            chat.getChildren().addAll(nickText, mensajeText); // Se añaden los dos textos creados
         });
     }
 
@@ -934,56 +1084,63 @@ public class TableroController extends MenuController implements Initializable, 
         });
     }
 
-
+    // Metodo para mostrar la pregunta que hizo el oponente
     private void mostrarPregunta(String pregunta){
-        this.shadowPanePreguntas.setVisible(true);
-        this.gridPaneRespuestas.setVisible(true);
+        this.shadowPanePreguntas.setVisible(true); // Muestra el panel que simula la sombra de la pregunta
+        this.gridPaneRespuestas.setVisible(true); // Muestra el gridPane que contiene la pregunta y los botones de respuesta
 
-        this.labelPregunta.setText(pregunta);
-        this.labelPregunta.getStyleClass().add("labelPregunta");
+        this.labelPregunta.setText(pregunta); // Se le asigna la pregunta al label correspondiente
+        this.labelPregunta.getStyleClass().add("labelPregunta"); // Se le asigna una clase de estilo al label
     }
 
+    // Metodo para responder a la pregunta y termianr turno
     public void terminarTurno(ActionEvent e) {
-        Button fuente = (Button) e.getSource();
+        Button fuente = (Button) e.getSource(); // Se obtiene el botón que se haya presionado para responder
 
-        if(fuente.getText().equals("SI")){
-            this.textFieldMensaje.setText("SI");
-        } else{
-            this.textFieldMensaje.setText("NO");
+        if(fuente.getText().equals("SI")){ // Si el botón tiene como texto propio un "SI"
+            this.textFieldMensaje.setText("SI"); // Se agrega al chat un "SI"
+        } else{ // En caso de no tener un "SI" el botón
+            this.textFieldMensaje.setText("NO"); // Se agrega al chat un "NO"
         }
 
-        enviarMensaje(e);
+        enviarMensaje(e); // Se envía el mensaje que se haya añadido al chat
 
-        this.shadowPanePreguntas.setVisible(false);
-        this.gridPaneRespuestas.setVisible(false);
+        this.shadowPanePreguntas.setVisible(false); // Se oculta el panel que simula la sombra de las persguntas
+        this.gridPaneRespuestas.setVisible(false); // Se oculta el gridPane de los botones de respuesta
     }
 
-
+    // Metodo para contar el tiempo transcurrido de partida
     public void reloj() {
+        // Se instancía un objeto de tipo TimeLine para llevar la cuenta
         Timeline timeline = new Timeline(new KeyFrame[]{new KeyFrame(Duration.seconds((double)1.0F), (event) -> {
-            ++this.segundosTranscurridos;
-            long horas = this.segundosTranscurridos / 3600L;
-            long minutos = this.segundosTranscurridos % 3600L / 60L;
-            long segundos = this.segundosTranscurridos % 60L;
-            String tiempoFormateado = String.format("%02d:%02d:%02d", horas, minutos, segundos);
-            this.tiempoPartida.setText(tiempoFormateado);
+            ++this.segundosTranscurridos; // Se aumentan los segundos transcurridos
+            long horas = this.segundosTranscurridos / 3600L; // Se crea una variable para las horas
+            long minutos = this.segundosTranscurridos % 3600L / 60L; // Se crea una variable para los minutos
+            long segundos = this.segundosTranscurridos % 60L; // Se crea una variable para los segundos
+            String tiempoFormateado = String.format("%02d:%02d:%02d", horas, minutos, segundos); // Se formatea el tiempo
+            this.tiempoPartida.setText(tiempoFormateado); // Se le asigna el tiempo a el label correspondiente
         }, new KeyValue[0])});
         timeline.setCycleCount(-1);
-        timeline.play();
+        timeline.play(); // Se inicia el conteo
     }
 
+    // Metodo para silenciar o reproducir música
     public void bottonMusica(ActionEvent e) {
-        MenuController.musica.setMute(!MenuController.musica.isMute());
-        // Cambiamos la decisión del usuario
-        if (desicionUsuario) {
-            desicionUsuario = false;
+        MenuController.musica.setMute(!MenuController.musica.isMute()); // Actualizamos la variable de estado de la clase Menu
+
+        if (desicionUsuario) { // Si el usuario quiere silenciar la música
+            desicionUsuario = false; // Invertimos la variable de estado local
+
+            // Cargamos el ícono de música silenciada
             Image img = new Image(getClass().getResourceAsStream("/Menu/Assets/musicaMuteada.png"));
             ImageView imgV = new ImageView(img);
             imgV.setFitWidth(40);
             imgV.setFitHeight(40);
             buttonMusica.setGraphic(imgV);
-        } else {
-            desicionUsuario = true;
+        } else { // de lo contrario
+            desicionUsuario = true; // Invertimos la variable de estado local
+
+            // Cargamos el ícono de musica
             Image img = new Image(getClass().getResourceAsStream("/Menu/Assets/musica.png"));
             ImageView imgV = new ImageView(img);
             imgV.setFitWidth(40);
@@ -992,21 +1149,25 @@ public class TableroController extends MenuController implements Initializable, 
         }
     }
 
+    // Metodo para reproducir el sonido de mensaje enviado
     public void sonidoEnviar(){
         sonidoMandar.setVolume(0.2);
         sonidoMandar.play();
     }
 
+    // Metodo para cambiar la aplicación entre su modo pantalla completa y ventana
     @Override
     public void bottonCambiarModo(ActionEvent e) {
         super.bottonCambiarModo(e);
     }
 
+    // Metodo para reproducir el sonido del teclado
     @Override
     public void sonidoTeclado() {
         super.sonidoTeclado();
     }
 
+    // Metodo para cambiar de canción
     @Override
     public void ButtonSiguienteCancion(){
         super.ButtonSiguienteCancion();
